<resources>
    <string name="app_name">MovieDBProject</string>

    <!--Login fragment-->
    <string name="login">Login</string>
    <string name="login_username">Enter your username</string>
    <string name="login_password">Enter your password</string>
    <string name="login_fail_query_retrofit">Retrofit query failure</string>
    <string name="login_fail_no_internet">No internet connection</string>

    <!--FragmentNavigation-->
    <string name="back_button_press">Please click BACK again to exit!</string>

    <!--Menu xml-->
    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_now_in_cinema">Now in cinemas</string>

    <!--Search bar-->
    <string name="search_title">Search</string>
    <string name="search_hint">Enter title</string>

    <!--Home view fragment-->
    <string name="more">more...</string>
    <string name="home_view_fragment_character">You have to enter at least one character</string>
    <string name="cancel">Cancel</string>

    <!--Profile fragment-->
    <string name="profile_fragment_change_password">Change password</string>
    <string name="profile_fragment_change_profile_photo">Change profile photo</string>

    <!--Change password dialog-->
    <string name="change_password_dialog_old_password">Enter old password</string>
    <string name="change_password_dialog_new_password">Enter new password</string>
    <string name="change_password_dialog_confirm_new_password">Confirm new password</string>
    <string name="change_password_dialog_title">Change password</string>
    <string name="change_password_dialog_old_new_password_match">Enter a new password</string>
    <string name="change_password_dialog_new_confirm_new_passwords_dont_match">The passwords do not match</string>
    <string name="change_password_dialog_successful">Your password has been changed</string>
    <string name="change_password_dialog_characters">You have to enter at least 5 characters</string>
    <string name="confirm">Confirm</string>

    <!--Registration fragment-->
    <string name="reg_username">Enter your username</string>
    <string name="reg_password">Enter your password</string>
    <string name="reg_confirm_password">Confirm your password</string>
    <string name="reg_button">Registration</string>
    <string name="reg_user_already_exists">User already exists</string>
    <string name="reg_user_created">User created</string>
    <string name="reg_select_user_type">Select an user type</string>
    <string name="reg_password_dont_match">Inserted passwords do not match</string>
    <string name="reg_characters_fail">You have to enter between 6 and 20 characters</string>
    <string name="fail">User already exists</string>

</resources>
